[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Nyakku Shigure <sigure.qaq@gmail.com>"]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
black = "^21.11b1"
Cython = "^3.0.0"

[tool.poetry.scripts]
demo = "demo.__main__:main"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry_core>=1.0.0", "cython"]
build-backend = "poetry.core.masonry.api"
